@@ -1,3 +1,4 @@
+2005-11-10:     PHOEBE_0.28a bugfix version released.
 2005-11-01:     PHOEBE_0.28 stable version released.
 2005-05-30:	PHOEBE_0.27 stable version released.
 2004-10-21:	PHOEBE_0.26 stable version released.
